feat: Add multiplayer-specific configurations
- Update package.json for multiplayer version
- Add Vercel configuration for Socket.io
- Create comprehensive multiplayer README
- Prepare for separate deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "grand-warfare",
-  "version": "0.1.0",
+  "name": "grand-warfare-multiplayer",
+  "version": "0.2.0",
   "private": true,
   "engines": {
     "node": ">=18.18.0"
